fixed number of visible tools

--- a/src/assets/styles/pages/_toolpage.scss
+++ b/src/assets/styles/pages/_toolpage.scss
@@ -71,6 +71,7 @@
     flex-direction: column;
     gap: 10px;
     align-self: stretch;
+    flex-grow: 1;
 
     .main-text {
       margin-bottom: auto;
